--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "nest-hackathon-starter",
+  "name": "nest--prisma-mongo-starter",
   "version": "0.1.0",
   "description": "Hackathon starter project for NestJS.",
   "repository": {
     "type": "git",
     "url": "https://github.com/ahmetuysal/nest-hackathon-starter"
   },
-  "author": "Ahmet Uysal",
+  "author": "Ahmet Uysal, Touhid Rahman",
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
@@ -28,14 +28,14 @@
     "postinstall": "npm run prisma:generate"
   },
   "dependencies": {
-    "@nestjs/common": "^8.1.1",
-    "@nestjs/config": "1.0.2",
-    "@nestjs/core": "^8.1.1",
+    "@nestjs/common": "^8.1.2",
+    "@nestjs/config": "1.1.0",
+    "@nestjs/core": "^8.1.2",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.1.1",
-    "@nestjs/swagger": "^5.1.2",
-    "@prisma/client": "3.3.0",
+    "@nestjs/platform-express": "^8.1.2",
+    "@nestjs/swagger": "^5.1.4",
+    "@prisma/client": "3.4.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -47,45 +47,43 @@
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
     "rxjs": "^7.4.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.1.3",
+    "@nestjs/cli": "^8.1.4",
     "@nestjs/schematics": "^8.0.4",
-    "@nestjs/testing": "^8.1.1",
-    "@types/bcrypt": "^3.0.0",
+    "@nestjs/testing": "^8.1.2",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/express-rate-limit": "^5.0.0",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^27.0.2",
-    "@types/nanoid": "^2.1.0",
-    "@types/node": "^16.11.1",
-    "@types/nodemailer": "^6.4.0",
-    "@types/passport-jwt": "^3.0.3",
+    "@types/nanoid": "^3.0.0",
+    "@types/node": "^16.11.6",
+    "@types/nodemailer": "^6.4.4",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.1.0",
+    "eslint-config-airbnb-typescript": "^14.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "husky": "^4.2.5",
-    "jest": "^27.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.3.1",
     "jest-extended": "1.1.0",
     "jest-mock-extended": "2.0.4",
-    "lint-staged": "^10.2.11",
     "prettier": "^2.4.1",
-    "prisma": "3.3.0",
+    "prisma": "3.4.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.7",
     "ts-loader": "^9.2.6",
-    "ts-node": "^10.3.0",
+    "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.11.0",
     "typescript": "^4.4.4"
   },
